--- a/src/app/spotbie/ads/header-ad-banner/header-ad-banner.component.css
+++ b/src/app/spotbie/ads/header-ad-banner/header-ad-banner.component.css
@@ -1,23 +1,25 @@
 .spotbie-ad-wrapper-header {
   position: relative;
   text-align: center;
+  margin: 0 auto;
+  max-height: 600px;
   background-repeat: no-repeat !important;
   background-size: contain !important;
   background-position: center !important;
-  max-width: 100%;
+  max-width: 1600px;
   min-width: 100%;
   width: 100%;
   background-color: #1c1924 !important;
   cursor: pointer;
   z-index: 9;
 }
+
 .spotbie-ad-wrapper-header.sb-mobileAdWrapper {
   position: relative;
   margin: 0 auto;
-  max-height: 100%;
-  min-width: 100%;
-  max-width: 100%;
-  right: 0;
+  max-width: 400px;
+  min-width: 400px;
+  width: 400px;
   min-height: unset;
   height: unset;
 }
@@ -25,10 +27,19 @@
   position: relative;
   left: 0;
   right: 0;
-  max-height: 320px;
   max-width: 100%;
+  max-height: 370px;
   box-shadow: unset;
 }
+
+.spotbie-ad-image {
+  position: relative;
+  margin: 0 auto;
+  max-width: 100%;
+  max-height: 600px;
+  box-shadow: unset;
+}
+
 .sb-mobileAdWrapper .sb-categoryList {
   text-align: center;
 }
@@ -52,6 +63,7 @@
   right: unset;
   left: unset;
   margin: 0 auto;
+  margin-top: 0px;
 }
 .sb-mobileAdWrapper .sb-sponsored {
   padding-top: 20px;
@@ -69,24 +81,20 @@
   margin-top: 10px;
 }
 .sb-mobileAdWrapper .sb-perDollar {
-  margin-right: 0;
+  margin-right: 0px;
 }
 .sb-mobileAdWrapper .sb-ad-bottom {
   position: relative;
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: rgb(28 25 36) !important;
+  top: unset !important;
+  background-color: #1c1924 !important;
 }
+
 .fa-map-marker-alt {
   font-size: 0.5rem;
 }
-.spotbie-ad-image {
-  position: relative;
-  left: 0;
-  right: 0;
-  height: auto;
-  max-width: 100%;
-}
+
 .spotbie-white-iconImg {
   position: absolute;
   top: 0;
@@ -103,13 +111,6 @@
   z-index: 0;
   pointer-events: none;
 }
-.sb-ad-top {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 2;
-}
 .sb-ad-bottom {
   position: absolute;
   bottom: 0;
@@ -119,41 +120,17 @@
   padding-top: 5px;
   padding-bottom: 5px;
   font-size: 0.7rem;
-  background-color: rgb(51 47 62 / 60%);
-}
-@media (max-width: 1635px) {
-  .spotbie-ad-wrapper-header {
-    max-width: 72%;
-    min-width: 72%;
-    width: 72%;
-    right: 4%;
-  }
-}
-@media (max-width: 1540px) {
-  .spotbie-ad-wrapper-header {
-    max-width: 68%;
-    min-width: 68%;
-    width: 68%;
-    right: 4%;
-  }
-}
-@media (max-width: 1100px) {
-  .spotbie-ad-wrapper-header {
-    max-width: 55%;
-    min-width: 55%;
-    width: 55%;
-    right: 6%;
-  }
+  background-color: rgb(51 47 62);
 }
 @media (max-width: 1024px) {
   .spotbie-ad-wrapper-header.sb-mobileAdWrapper,
   .spotbie-ad-wrapper-header {
     position: relative;
     margin: 0 auto;
-    max-width: 102%;
-    min-width: 102%;
-    width: 102%;
-    right: 1%;
+    max-width: 100%;
+    min-width: 100%;
+    width: 100%;
+    right: 0%;
     min-height: unset;
     height: unset;
   }
@@ -164,6 +141,8 @@
     position: relative;
     left: 0;
     right: 0;
+    min-width: 100%;
+    max-width: 100%;
     box-shadow: unset;
     background-color: #26232e !important;
     background-size: contain !important;
@@ -191,6 +170,7 @@
     right: unset;
     left: unset;
     margin: 0 auto;
+    margin-top: 0px;
   }
   .sb-sponsored {
     padding-top: 20px;
@@ -210,16 +190,17 @@
   .sb-perDollar {
     margin-right: 0px;
   }
-  .sb-ad-bottom {
+  .sb-ad-bottom,
+  .sb-ad-top {
     position: relative;
-    padding-top: 15px;
-    padding-bottom: 15px;
     background-color: rgb(28 25 36) !important;
+    top: unset;
   }
 }
 @media (max-width: 420px) {
   .sb-mobileAdWrapper .spotbie-ad-image,
   .spotbie-ad-image {
-    max-width: 100%;
+    min-width: 100%;
+    height: auto;
   }
 }
